ubi-web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubi-web
  labels:
    app: ubi-web
spec:
  selector:
    app: ubi-web

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
